--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,64 +1,28 @@
 body {
-    background: linear-gradient(blue, gray, white, gray, blue);
-    background-repeat: no-repeat;
+    background-image: url("../images/background.png");
 }
 
 [class*="col-"] {
     margin-top: 2%;
 }
-.navbar{
-    background: linear-gradient(white, gray);
-    width: 100%;
-    padding: 0;
-    height: 60px;
+#landing {
+    background-image: url("../images/misenplace.jpg"); 
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
-li a, .navlinks {
-    display: inline-block;
-    color: black;
+h1 {
+    margin-top: 5%;
+    font-size: 500%;
+    text-shadow: 2px 2px black;
+}
+.containerStyles {
+    color: white;
+    font-family: Quicksand;
     text-align: center;
-    padding: 14px 12px;
-    text-decoration: none;
-    font-size: 110%;
-    margin: 2%;
-    font-weight: 500;
-}
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: lightslategray;
+    overflow: auto;
 }
 
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.navbar-expand-lg .navbar-collapse {
-    margin-right: 5%;
-}
-.d-block w-100 {
-    width: 640px;
-    height: 360px;
-}
 #footer {
     width: 100%;
     margin-top: 0px;
@@ -69,4 +33,5 @@ li.dropdown {
     font-family: helvetica;
     font-size: 12px;
     text-align: center;
+    position: absolute;
 }
