--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("../images/background.png");
     text-shadow: 2px 2px black;
+    width: 100%;
 }
 
 [class*="col-"] {
@@ -10,6 +11,7 @@ body {
     background-image: url("../images/misenplace.jpg"); 
     background-repeat: no-repeat;
     background-position: center;
+    width: 80%;
     
 }
 h1 {
@@ -56,16 +58,27 @@ h2 {
     background-color: red;
     margin: 4%;
 }
-#footer {
-    width: 100%;
-    margin-top: 0px;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    background: linear-gradient( rgb(0, 124, 10), rgb(17, 230, 70), rgb(0, 124, 10));
-    color: black;
-    text-shadow: none;
-    font-family: helvetica;
-    font-size: 12px;
+#footerContainer {
+    overflow: hidden;
     text-align: center;
-    position: absolute;
+    background: rgb(240, 240, 240);
+    width: 100%;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 90%;
+    height: 4.5em;
+    padding-top: 1em;
+    text-shadow: none;
+}
+#footer {
+
+    overflow: auto;
+    text-align: center;
+    color:black;
+    background: darkgray;
+    width: 100%;
+    border-top-left-radius: 90%;
+    border-top-right-radius: 10%;
+    height: 4.5em;
+    padding-top: 1em;
+    text-shadow: none;
 }
